--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,16 @@ body,
     height: 100%;
     margin: 0;
 }
+.grid-container {
+    width: 700px;
+    height: 400px;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto 200px auto;
+
+}
+.grid-container div {
+background-color: #DAA520;
+
+}
